--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
            <ul>
-            <li><a href="/recipes/chicken_casserole.html">Chick Casserole</a></li>
-            <li><a href="/recipes/chilli.html">Homemade Chilli</a></li>
-            <li><a href="/recipes/spaghetti.html">Spaghetti with homemade sauce</a></li>
+            <li><a href="./recipes/chicken_casserole.html">Chick Casserole</a></li>
+            <li><a href="./recipes/chilli.html">Homemade Chilli</a></li>
+            <li><a href="./recipes/spaghetti.html">Spaghetti with homemade sauce</a></li>
            </ul> 
     </body>
     
